--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
 
@@ -13,6 +14,7 @@
         android:layout_height="131dp"
         android:layout_marginEnd="31dp"
         android:checkedButton="@+id/tip15"
+        android:background="@color/orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rg_label">
 
@@ -22,8 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/tip1"
-            android:textSize="18sp" />
-
+            android:textSize="18sp"/>
         <RadioButton
             android:id="@+id/tip20"
             android:layout_width="wrap_content"
@@ -58,6 +59,7 @@
         android:text="@string/rb_label"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:background="@color/orange"
         app:layout_constraintBottom_toTopOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,8 +68,9 @@
         android:id="@+id/tf_tipPercent"
         android:layout_width="144dp"
         android:layout_height="46dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:background="@color/orange"
         android:ems="10"
         android:hint="@string/tip_input"
         android:inputType="numberDecimal"
@@ -81,10 +84,13 @@
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="29dp"
+        android:background="@color/orange"
         android:ems="10"
         android:hint="@string/numPeople"
         android:inputType="number"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -98,6 +104,8 @@
         android:hint="@string/billAmount"
         android:inputType="numberDecimal"
         android:textAlignment="center"
+        android:background="@color/orange"
+        android:textColorHint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tf_numOfPeople" />
 
@@ -109,6 +117,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="16dp"
         android:text="@string/resButton"
+        android:background="@color/orange"
         app:layout_constraintEnd_toStartOf="@+id/calcButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tf_billAmount" />
@@ -120,6 +129,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/calcButton"
+        android:background="@color/orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/resetButton"
         app:layout_constraintTop_toBottomOf="@+id/tf_tipPercent" />
@@ -133,6 +143,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/billTotal"
         android:textSize="30sp"
+        android:background="@color/orange"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tipTotal" />
 
@@ -145,6 +156,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/tipTotal"
         android:textSize="30sp"
+        android:background="@color/orange"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetButton" />
 
@@ -157,6 +169,7 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/totalPerPerson"
         android:textSize="30sp"
+        android:background="@color/orange"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/billTotal" />
 
